--- a/reference/css/style.css
+++ b/reference/css/style.css
@@ -9,7 +9,7 @@
     --darkblue: #004A99;
     --lightblue: #D4E8FC;
     --lightgray: #F0F5FA;
-    --lightyellow: #B3D9FF;
+    --lightyellow: #99CCFF;
     --skyblue: #4EAEFF;
     --bluegray: #AEBAC6;
     --navy: #003366;
